--- a/dillo/templates/dillo/components/_post_actions.pug
+++ b/dillo/templates/dillo/components/_post_actions.pug
@@ -5,7 +5,7 @@
 	.post-actions-button-group
 		| {% if request.user.is_authenticated %}
 		button.post-actions-btn(
-			data-toggle="tooltip",
+			data-toggle="tooltip", data-placement="bottom",
 			title="{% if post|is_liked:request.user %}{% trans 'Unlike' %}{% else %}{% trans 'Like' %}{% endif %}",
 			class="js-like-toggle{% if post|is_liked:request.user %} is-liked{% endif %}",
 			data-like_toggle_url="{% url 'like_toggle' content_type_id=post.content_type_id object_id=post.id %}",
@@ -13,7 +13,7 @@
 			i.i-heart
 		| {% else %}
 		a.post-actions-btn(
-			data-toggle="tooltip",
+			data-toggle="tooltip", data-placement="bottom",
 			href="{% url 'account_signup' %}",
 			title="{% trans 'Like' %}")
 			i.i-heart
@@ -30,7 +30,7 @@
 		button.post-actions-btn(
 			class="js-bookmark-toggle btn-bookmark {% if post|is_bookmarked:request.user %}is-active{% endif %}",
 			title="{% trans 'Save to Bookmarks' %}",
-			data-toggle="tooltip",
+			data-toggle="tooltip", data-placement="bottom",
 			data-bookmark_toggle_url="{% url 'bookmark_toggle' post.id %}")
 			i.i-bookmark
 		| {% else %}
