--- a/dillo/templates/dillo/components/_pagination.pug
+++ b/dillo/templates/dillo/components/_pagination.pug
@@ -1,7 +1,7 @@
 | {% load i18n %}
 
 | {% if is_detail %}
-.theater-nav.ml-auto.mb-3
+.btn-toolbar-row
 	| {% if prev_obj_url %}
 	a.btn.btn-link.with-icon(href="{{ prev_obj_url }}")
 		i.i-chevron-left
@@ -22,7 +22,7 @@
 	| {% endif %}
 
 | {% else %}
-.theater-nav
+.btn-toolbar-row
 	| {% if page_obj.has_previous %}
 	a.btn.btn-link.with-icon(href="?{{search}}&page={{ page_obj.previous_page_number }}", tabindex='-1')
 		i.i-chevron-left
@@ -33,7 +33,7 @@
 		span {% trans 'Previous' %}
 	| {% endif %}
 
-	.btn-group.mx-2
+	.btn-group
 		| {% for page_number in page_obj.paginator.page_range %}
 		a.btn.btn-link.px-1(
 			href="?page={{ page_number }}",
