--- a/dillo/templates/dillo/components/_profile_header_sidebar.pug
+++ b/dillo/templates/dillo/components/_profile_header_sidebar.pug
@@ -6,7 +6,7 @@
 .profile-header
 	.profile-info
 		.profile-info-avatar
-			| {% include 'dillo/components/_profile_avatar.pug' with user=user size='medium' %}
+			| {% include 'dillo/components/_profile_avatar.pug' with user=user size='medium' tooltip='bottom' %}
 
 		.profile-stats
 			span.stat(
