--- a/dillo/templates/dillo/account_edit_base.pug
+++ b/dillo/templates/dillo/account_edit_base.pug
@@ -5,45 +5,45 @@
 .container.mt-3
 	.row
 		.col-sm-3.mt-2
-			#list-tab.list-group
-				a.list-group-item.list-group-item-action(
+			.btn-toolbar-col
+				a.btn.btn-link-bg(
 					href="{% url 'profile_edit' %}",
 					class="{% if request.path == '/accounts/profile/'%}active{% endif %}",
 				)
-					i.i-user.pr-3
+					i.i-user
 					| Profile
 
-				a.list-group-item.list-group-item-action(
+				a.btn.btn-link-bg(
 					href="{% url 'account_change_password' %}",
 					class="{% if request.path == '/accounts/password/change/'%}active{% endif %}",
 				)
-					i.i-shield.pr-3
+					i.i-shield
 					| Change Password
 
-				a.list-group-item.list-group-item-action(
+				a.btn.btn-link-bg(
 					href="{% url 'account_email' %}",
 					class="{% if request.path == '/accounts/email/'%}active{% endif %}",
 				)
-					i.i-mail.pr-3
+					i.i-mail
 					| Email
 
-				a.list-group-item.list-group-item-action(
+				a.btn.btn-link-bg(
 					href="{% url 'account-email-notifications' %}",
 					class="{% if request.path == '/accounts/notifications'%}active{% endif %}",
 				)
-					i.i-bell.pr-3
+					i.i-bell
 					| Notifications
 
-				a.list-group-item.list-group-item-action(
+				a.btn.btn-link-bg(
 					href="{% url 'account_settings' %}",
 					class="{% if request.path == '/accounts/settings/'%}active{% endif %}",
 
 				)
-					i.i-settings.pr-3
+					i.i-settings
 					| Settings
 
 		.col-9
-			#nav-tabContent.tab-content.p-2
+			#nav-tabContent.tab-content
 				.tab-pane.fade.show.active
 					.d-flex.flex-column
 						.card
