--- a/dillo/templates/dillo/components/_footer.pug
+++ b/dillo/templates/dillo/components/_footer.pug
@@ -3,9 +3,9 @@
 
 footer.site-footer
 	.btn-toolbar-row
-		a.btn.btn-link.btn-icon(href="https://twitter.com/AnimatoHQ")
+		a.btn(href="https://twitter.com/AnimatoHQ")
 			i.i-twitter
-		a.btn.btn-link.btn-icon(href="https://instagram.com/AnimatoHQ")
+		a.btn(href="https://instagram.com/AnimatoHQ")
 			i.i-instagram
 
 	.footer-nav
