--- a/dillo/templates/dillo/design_system.pug
+++ b/dillo/templates/dillo/design_system.pug
@@ -19,10 +19,11 @@
     .col-md-8
       h2 Regular
       .btn Button
+      .btn.btn-link Link
+      .btn.btn-primary Primary
       .btn.btn-secondary Secondary
       .btn.btn-danger Danger
       .btn.btn-success Success
-      .btn.btn-info Info
       .btn.btn-warning Warning
 
       hr
@@ -30,15 +31,17 @@
       h2 Buttons Row
       .btn-toolbar-row
         a(href="#").btn Button
+        a(href="#").btn.btn-link Link
+        a(href="#").btn.btn-primary Primary
         a(href="#").btn.btn-secondary Secondary
         a(href="#").btn.btn-danger Danger
         a(href="#").btn.btn-success Success
-        a(href="#").btn.btn-info Info
         a(href="#").btn.btn-warning Warning
 
         .btn-group
           .btn A
           .btn B
+          .btn C
 
       hr
 
@@ -47,12 +50,13 @@
         .col-4
           .btn-toolbar-col
             a(href="#").btn Button
+            a(href="#").btn.btn-link Link
+            a(href="#").btn.btn-primary Primary
             a(href="#").btn.btn-secondary Secondary
-            a(href="#").btn.btn-danger Danger
         .col-4
           .btn-toolbar-col
+            a(href="#").btn.btn-danger Danger
             a(href="#").btn.btn-success Success
-            a(href="#").btn.btn-info Info
             a(href="#").btn.btn-warning Warning
 
     .col-md-4
@@ -64,11 +68,12 @@
 
       h2 Buttons Group
       .btn-group
+        a(href="#").btn Button
+        a(href="#").btn.btn-link Link
         a(href="#").btn.btn-primary Primary
         a(href="#").btn.btn-secondary Secondary
         a(href="#").btn.btn-danger Danger
         a(href="#").btn.btn-success Success
-        a(href="#").btn.btn-info Info
         a(href="#").btn.btn-warning Warning
 
 
