--- a/dillo/templates/dillo/components/_feed_trending.pug
+++ b/dillo/templates/dillo/components/_feed_trending.pug
@@ -8,6 +8,6 @@
     | {% for tag in trending_tags %}
     li
       a.btn-tag(href="{% url 'posts_list_tag' tag %}", title="{{ tag }}")
-        | &#35;{{ tag | truncatechars:35 }}
+        span &#35;{{ tag | truncatechars:35 }}
     | {% endfor %}
 | {% endif %}
