--- a/dillo/templates/dillo/components/_pagination.pug
+++ b/dillo/templates/dillo/components/_pagination.pug
@@ -1,53 +1,54 @@
 | {% load i18n %}
 
-| {% if is_detail %}
-.btn-toolbar-row
-	| {% if prev_obj_url %}
-	a.btn.btn-link(href="{{ prev_obj_url }}")
-		i.i-chevron-left
-		span {% trans 'Previous' %}
-	| {% else %}
-	a.btn.btn-link.disabled(href="#")
-		i.i-chevron-left
-		span {% trans 'Previous' %}
-	| {% endif %}
-	| {% if next_obj_url %}
-	a.btn.btn-link.right(href="{{ next_obj_url }}")
-		span {% trans 'Next' %}
-		i.i-chevron-right
-	| {% else %}
-	a.btn.btn-link.disabled(href="#")
-		span {% trans 'Next' %}
-		i.i-chevron-right
-	| {% endif %}
+.pagination
+	| {% if is_detail %}
+	.btn-toolbar-row
+		| {% if prev_obj_url %}
+		a.btn(href="{{ prev_obj_url }}")
+			i.i-chevron-left
+			span {% trans 'Previous' %}
+		| {% else %}
+		a.btn.disabled(href="#")
+			i.i-chevron-left
+			span {% trans 'Previous' %}
+		| {% endif %}
+		| {% if next_obj_url %}
+		a.btn(href="{{ next_obj_url }}")
+			span {% trans 'Next' %}
+			i.i-chevron-right
+		| {% else %}
+		a.btn.disabled(href="#")
+			span {% trans 'Next' %}
+			i.i-chevron-right
+		| {% endif %}
 
-| {% else %}
-.btn-toolbar-row
-	| {% if page_obj.has_previous %}
-	a.btn.btn-link(href="?{{search}}&page={{ page_obj.previous_page_number }}", tabindex='-1')
-		i.i-chevron-left
-		span {% trans 'Previous' %}
 	| {% else %}
-	a.btn.btn-link.disabled(href="#")
-		i.i-chevron-left
-		span {% trans 'Previous' %}
-	| {% endif %}
+	.btn-toolbar-row
+		| {% if page_obj.has_previous %}
+		a.btn(href="?{{search}}&page={{ page_obj.previous_page_number }}", tabindex='-1')
+			i.i-chevron-left
+			span {% trans 'Previous' %}
+		| {% else %}
+		a.btn.disabled(href="#")
+			i.i-chevron-left
+			span {% trans 'Previous' %}
+		| {% endif %}
 
-	.btn-group
-		| {% for page_number in page_obj.paginator.page_range %}
-		a.btn.btn-link.px-1(
-			href="?page={{ page_number }}",
-			class="{% if page_number == page_obj.number %}active{% endif %}")
-			span {{ page_number }}
-		| {% endfor %}
+		.btn-group
+			| {% for page_number in page_obj.paginator.page_range %}
+			a.btn(
+				href="?page={{ page_number }}",
+				class="{% if page_number == page_obj.number %}active{% endif %}")
+				span {{ page_number }}
+			| {% endfor %}
 
-	| {% if page_obj.has_next %}
-	a.btn.btn-link.right(href="?page={{ page_obj.next_page_number }}")
-		span {% trans 'Next' %}
-		i.i-chevron-right
-	| {% else %}
-	a.btn.btn-link.disabled(href="#")
-		span {% trans 'Next' %}
-		i.i-chevron-right
+		| {% if page_obj.has_next %}
+		a.btn(href="?page={{ page_obj.next_page_number }}")
+			span {% trans 'Next' %}
+			i.i-chevron-right
+		| {% else %}
+		a.btn.disabled(href="#")
+			span {% trans 'Next' %}
+			i.i-chevron-right
+		| {% endif %}
 	| {% endif %}
-| {% endif %}
